[tool.poetry]
name = "wizard"
version = "0.1.0"
description = ""
authors = ["Umich Driving Simulator Team <you@example.com>"]
packages = [
  { include = "wizard" },
]

[tool.poetry.dependencies]
python = ">=3.6, <3.9"
evdev = "^1.4.0"
carla = "^0.9.13"
pygame = "^2.1.2"
numpy = "^1.19.5"
msgpack-rpc-python = "^0.4.1"

[tool.poetry.dev-dependencies]
ipython = "^7.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
